# SCORe

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Benchmark/: CMakeLists.txt
Benchmark/src/: smallbank.cc  smallbank_correctcheck.cc
CControl/: CMakeLists.txt
CControl/include/: CControl.hh  CControlAPI.hh  CControlContextPair.hh  CControlRPC.hh  Context.hh  InternalClient.hh  Server.hh  TXAPI.hh  Transaction.hh  TxClientAPI.hh
CControl/src/: CControl.cc  CControlContextPair.cc  CControlRPC.cc  Context.cc  InternalClient.cc  Server.cc  TXAPI.cc  TxClientAPI.cc
CControl/test/: CControlTest.cc  rpcTest.cc
Protocol/: CMakeLists.txt  Makefile
Protocol/include/: protocol.grpc.pb.h  protocol.pb.h
Protocol/pb/: protocol.proto
Protocol/src/: protocol.grpc.pb.cc  protocol.pb.cc
Server/: CMakeLists.txt
Server/src/: server.cc
Store/: CMakeLists.txt
Store/include/: Map.hh
